--- a/package.json
+++ b/package.json
@@ -25,27 +25,133 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "jspm": "^0.16.34",
+    "jspm": "^0.17.0-beta.22",
     "live-server": "^1.0.0"
   },
+  "dependencies": {},
   "jspm": {
+    "name": "catundercover",
+    "main": "app/index.js",
     "directories": {
       "baseURL": "src",
       "packages": "src/vendor"
     },
-    "configFile": "src/config.system.js",
     "dependencies": {
-      "angular2": "npm:angular2@^2.0.0-beta.17",
-      "css": "github:systemjs/plugin-css@^0.1.21",
+      "@angular/http": "npm:@angular/http@^2.0.0-rc.2",
+      "@angular/router": "npm:@angular/router@^3.0.0-alpha.4",
+      "@ngrx/store": "npm:@ngrx/store@^2.0.0",
+      "core-js": "npm:core-js@^2.4.0",
+      "css": "github:systemjs/plugin-css@^0.1.23",
       "json": "github:systemjs/plugin-json@^0.1.2",
-      "less": "github:katrotz/jspm-less-plugin@^0.0.11",
+      "reflect-metadata": "npm:reflect-metadata@^0.1.3",
       "text": "github:systemjs/plugin-text@^0.0.8"
     },
     "devDependencies": {
-      "babel": "npm:babel-core@^5.8.24",
-      "babel-runtime": "npm:babel-runtime@^5.8.24",
-      "core-js": "npm:core-js@^1.1.4"
+      "plugin-babel": "npm:systemjs-plugin-babel@^0.0.12"
+    },
+    "peerDependencies": {
+      "@angular/common": "npm:@angular/common@2.0.0-rc.2",
+      "@angular/compiler": "npm:@angular/compiler@2.0.0-rc.2",
+      "@angular/core": "npm:@angular/core@2.0.0-rc.2",
+      "@angular/platform-browser": "npm:@angular/platform-browser@2.0.0-rc.2",
+      "@angular/platform-browser-dynamic": "npm:@angular/platform-browser-dynamic@^2.0.0-rc.2",
+      "@ngrx/core": "npm:@ngrx/core@^1.0.0",
+      "assert": "github:jspm/nodelibs-assert@^0.2.0-alpha",
+      "buffer": "github:jspm/nodelibs-buffer@^0.2.0-alpha",
+      "constants": "github:jspm/nodelibs-constants@^0.2.0-alpha",
+      "domain": "github:jspm/nodelibs-domain@^0.2.0-alpha",
+      "errno": "npm:errno@^0.1.1",
+      "events": "github:jspm/nodelibs-events@^0.2.0-alpha",
+      "fs": "github:jspm/nodelibs-fs@^0.2.0-alpha",
+      "graceful-fs": "npm:graceful-fs@^4.1.2",
+      "image-size": "npm:image-size@0.5",
+      "mime": "npm:mime@^1.2.11",
+      "mkdirp": "npm:mkdirp@^0.5.0",
+      "path": "github:jspm/nodelibs-path@^0.2.0-alpha",
+      "process": "github:jspm/nodelibs-process@^0.2.0-alpha",
+      "promise": "npm:promise@^7.1.1",
+      "rxjs": "npm:rxjs@5.0.0-beta.6",
+      "source-map": "npm:source-map@^0.5.3",
+      "stream": "github:jspm/nodelibs-stream@^0.2.0-alpha",
+      "url": "github:jspm/nodelibs-url@^0.2.0-alpha",
+      "util": "github:jspm/nodelibs-util@^0.2.0-alpha",
+      "zone.js": "npm:zone.js@^0.6.6"
+    },
+    "overrides": {
+      "npm:@angular/common@2.0.0-rc.2": {
+        "meta": {
+          "src/*.js": {
+            "deps": [
+              "reflect-metadata",
+              "zone.js"
+            ]
+          }
+        }
+      },
+      "npm:@angular/compiler@2.0.0-rc.2": {
+        "meta": {
+          "src/*.js": {
+            "deps": [
+              "reflect-metadata",
+              "zone.js"
+            ]
+          }
+        }
+      },
+      "npm:@angular/core@2.0.0-rc.2": {
+        "meta": {
+          "src/*.js": {
+            "deps": [
+              "reflect-metadata",
+              "zone.js"
+            ]
+          }
+        }
+      },
+      "npm:@angular/http@2.0.0-rc.2": {
+        "meta": {
+          "src/*.js": {
+            "deps": [
+              "reflect-metadata",
+              "zone.js"
+            ]
+          }
+        }
+      },
+      "npm:@angular/platform-browser-dynamic@2.0.0-rc.2": {
+        "meta": {
+          "src/*.js": {
+            "deps": [
+              "reflect-metadata",
+              "zone.js"
+            ]
+          }
+        }
+      },
+      "npm:@angular/platform-browser@2.0.0-rc.2": {
+        "meta": {
+          "src/*.js": {
+            "deps": [
+              "reflect-metadata",
+              "zone.js"
+            ]
+          }
+        }
+      },
+      "npm:inherits@2.0.1": {
+        "ignore": [
+          "test.js"
+        ]
+      },
+      "npm:reflect-metadata@0.1.3": {
+        "jspmNodeConversion": false,
+        "map": {
+          "crypto": {
+            "node": "@node/crypto",
+            "default": "@empty"
+          }
+        }
+      }
     }
-  },
-  "dependencies": {}
+  }
 }
