--- a/package.json
+++ b/package.json
@@ -39,10 +39,16 @@
     "dependencies": {
       "@angular/http": "npm:@angular/http@^2.0.0-rc.2",
       "@angular/router": "npm:@angular/router@^3.0.0-alpha.4",
+      "@angular2-material/button": "npm:@angular2-material/button@^2.0.0-alpha.5-2",
+      "@angular2-material/card": "npm:@angular2-material/card@^2.0.0-alpha.5-2",
+      "@angular2-material/grid-list": "npm:@angular2-material/grid-list@^2.0.0-alpha.5-2",
+      "@angular2-material/toolbar": "npm:@angular2-material/toolbar@^2.0.0-alpha.5-2",
       "@ngrx/store": "npm:@ngrx/store@^2.0.0",
       "core-js": "npm:core-js@^2.4.0",
       "css": "github:systemjs/plugin-css@^0.1.23",
       "json": "github:systemjs/plugin-json@^0.1.2",
+      "less": "github:katrotz/jspm-less-plugin@^0.0.11",
+      "lodash": "npm:lodash@^4.13.1",
       "reflect-metadata": "npm:reflect-metadata@^0.1.3",
       "text": "github:systemjs/plugin-text@^0.0.8"
     },
@@ -50,11 +56,12 @@
       "plugin-babel": "npm:systemjs-plugin-babel@^0.0.12"
     },
     "peerDependencies": {
-      "@angular/common": "npm:@angular/common@2.0.0-rc.2",
+      "@angular/common": "npm:@angular/common@^2.0.0-rc.1",
       "@angular/compiler": "npm:@angular/compiler@2.0.0-rc.2",
-      "@angular/core": "npm:@angular/core@2.0.0-rc.2",
+      "@angular/core": "npm:@angular/core@^2.0.0-rc.1",
       "@angular/platform-browser": "npm:@angular/platform-browser@2.0.0-rc.2",
       "@angular/platform-browser-dynamic": "npm:@angular/platform-browser-dynamic@^2.0.0-rc.2",
+      "@angular2-material/core": "npm:@angular2-material/core@^2.0.0-alpha.5-2",
       "@ngrx/core": "npm:@ngrx/core@^1.0.0",
       "assert": "github:jspm/nodelibs-assert@^0.2.0-alpha",
       "buffer": "github:jspm/nodelibs-buffer@^0.2.0-alpha",
