--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
       "packages": "src/vendor"
     },
     "dependencies": {
-      "@angular/http": "npm:@angular/http@^2.0.0-rc.2",
-      "@angular/router": "npm:@angular/router@^3.0.0-alpha.4",
+      "@angular/http": "npm:@angular/http@^2.0.0-rc.5",
+      "@angular/router": "npm:@angular/router@^3.0.0-rc.1",
       "@angular2-material/button": "npm:@angular2-material/button@^2.0.0-alpha.5-2",
       "@angular2-material/card": "npm:@angular2-material/card@^2.0.0-alpha.5-2",
       "@angular2-material/grid-list": "npm:@angular2-material/grid-list@^2.0.0-alpha.5-2",
@@ -50,18 +50,17 @@
       "less": "github:katrotz/jspm-less-plugin@^0.0.11",
       "lightbox2": "npm:lightbox2@^2.8.2",
       "lodash": "npm:lodash@^4.13.1",
-      "reflect-metadata": "npm:reflect-metadata@^0.1.3",
       "text": "github:systemjs/plugin-text@^0.0.8"
     },
     "devDependencies": {
       "plugin-babel": "npm:systemjs-plugin-babel@^0.0.12"
     },
     "peerDependencies": {
-      "@angular/common": "npm:@angular/common@^2.0.0-rc.1",
-      "@angular/compiler": "npm:@angular/compiler@2.0.0-rc.2",
-      "@angular/core": "npm:@angular/core@^2.0.0-rc.1",
-      "@angular/platform-browser": "npm:@angular/platform-browser@2.0.0-rc.2",
-      "@angular/platform-browser-dynamic": "npm:@angular/platform-browser-dynamic@^2.0.0-rc.2",
+      "@angular/common": "npm:@angular/common@^2.0.0-rc.5",
+      "@angular/compiler": "npm:@angular/compiler@^2.0.0-rc.5",
+      "@angular/core": "npm:@angular/core@^2.0.0-rc.5",
+      "@angular/platform-browser": "npm:@angular/platform-browser@^2.0.0-rc.5",
+      "@angular/platform-browser-dynamic": "npm:@angular/platform-browser-dynamic@^2.0.0-rc.5",
       "@angular2-material/core": "npm:@angular2-material/core@^2.0.0-alpha.5-2",
       "@ngrx/core": "npm:@ngrx/core@^1.0.0",
       "assert": "github:jspm/nodelibs-assert@^0.2.0-alpha",
@@ -78,6 +77,7 @@
       "path": "github:jspm/nodelibs-path@^0.2.0-alpha",
       "process": "github:jspm/nodelibs-process@^0.2.0-alpha",
       "promise": "npm:promise@^7.1.1",
+      "reflect-metadata": "npm:reflect-metadata@^0.1.8",
       "rxjs": "npm:rxjs@5.0.0-beta.6",
       "source-map": "npm:source-map@^0.5.3",
       "stream": "github:jspm/nodelibs-stream@^0.2.0-alpha",
@@ -86,7 +86,7 @@
       "zone.js": "npm:zone.js@^0.6.6"
     },
     "overrides": {
-      "npm:@angular/common@2.0.0-rc.2": {
+      "npm:@angular/common@2.0.0-rc.5": {
         "meta": {
           "src/*.js": {
             "deps": [
@@ -96,7 +96,7 @@
           }
         }
       },
-      "npm:@angular/compiler@2.0.0-rc.2": {
+      "npm:@angular/compiler@2.0.0-rc.5": {
         "meta": {
           "src/*.js": {
             "deps": [
@@ -106,7 +106,7 @@
           }
         }
       },
-      "npm:@angular/core@2.0.0-rc.2": {
+      "npm:@angular/core@2.0.0-rc.5": {
         "meta": {
           "src/*.js": {
             "deps": [
@@ -116,7 +116,7 @@
           }
         }
       },
-      "npm:@angular/http@2.0.0-rc.2": {
+      "npm:@angular/http@2.0.0-rc.5": {
         "meta": {
           "src/*.js": {
             "deps": [
@@ -126,7 +126,7 @@
           }
         }
       },
-      "npm:@angular/platform-browser-dynamic@2.0.0-rc.2": {
+      "npm:@angular/platform-browser-dynamic@2.0.0-rc.5": {
         "meta": {
           "src/*.js": {
             "deps": [
@@ -136,7 +136,7 @@
           }
         }
       },
-      "npm:@angular/platform-browser@2.0.0-rc.2": {
+      "npm:@angular/platform-browser@2.0.0-rc.5": {
         "meta": {
           "src/*.js": {
             "deps": [
@@ -151,13 +151,9 @@
           "test.js"
         ]
       },
-      "npm:reflect-metadata@0.1.3": {
-        "jspmNodeConversion": false,
+      "npm:reflect-metadata@0.1.8": {
         "map": {
-          "crypto": {
-            "node": "@node/crypto",
-            "default": "@empty"
-          }
+          "crypto": "@empty"
         }
       }
     }
