--- a/package.json
+++ b/package.json
@@ -44,10 +44,11 @@
       "@angular2-material/grid-list": "npm:@angular2-material/grid-list@^2.0.0-alpha.5-2",
       "@angular2-material/toolbar": "npm:@angular2-material/toolbar@^2.0.0-alpha.5-2",
       "@ngrx/store": "npm:@ngrx/store@^2.0.1",
+      "clean-css": "npm:clean-css@^3.4.19",
       "core-js": "npm:core-js@^2.4.0",
       "css": "github:systemjs/plugin-css@^0.1.23",
       "json": "github:systemjs/plugin-json@^0.1.2",
-      "less": "github:katrotz/jspm-less-plugin@^0.0.11",
+      "less": "github:katrotz/systemjs-less-plugin@^1.8.4",
       "lightbox2": "npm:lightbox2@^2.8.2",
       "lodash": "npm:lodash@^4.13.1",
       "text": "github:systemjs/plugin-text@^0.0.8"
@@ -65,15 +66,21 @@
       "@ngrx/core": "npm:@ngrx/core@^1.0.0",
       "assert": "github:jspm/nodelibs-assert@^0.2.0-alpha",
       "buffer": "github:jspm/nodelibs-buffer@^0.2.0-alpha",
+      "child_process": "github:jspm/nodelibs-child_process@^0.2.0-alpha",
       "constants": "github:jspm/nodelibs-constants@^0.2.0-alpha",
+      "crypto": "github:jspm/nodelibs-crypto@^0.2.0-alpha",
       "domain": "github:jspm/nodelibs-domain@^0.2.0-alpha",
       "errno": "npm:errno@^0.1.1",
       "events": "github:jspm/nodelibs-events@^0.2.0-alpha",
       "fs": "github:jspm/nodelibs-fs@^0.2.0-alpha",
       "graceful-fs": "npm:graceful-fs@^4.1.2",
+      "http": "github:jspm/nodelibs-http@^0.2.0-alpha",
+      "https": "github:jspm/nodelibs-https@^0.2.0-alpha",
       "image-size": "npm:image-size@0.5",
       "mime": "npm:mime@^1.2.11",
       "mkdirp": "npm:mkdirp@^0.5.0",
+      "module": "github:jspm/nodelibs-module@^0.2.0-alpha",
+      "os": "github:jspm/nodelibs-os@^0.2.0-alpha",
       "path": "github:jspm/nodelibs-path@^0.2.0-alpha",
       "process": "github:jspm/nodelibs-process@^0.2.0-alpha",
       "promise": "npm:promise@^7.1.1",
@@ -81,8 +88,10 @@
       "rxjs": "npm:rxjs@5.0.0-beta.6",
       "source-map": "npm:source-map@^0.5.3",
       "stream": "github:jspm/nodelibs-stream@^0.2.0-alpha",
+      "string_decoder": "github:jspm/nodelibs-string_decoder@^0.2.0-alpha",
       "url": "github:jspm/nodelibs-url@^0.2.0-alpha",
       "util": "github:jspm/nodelibs-util@^0.2.0-alpha",
+      "vm": "github:jspm/nodelibs-vm@^0.2.0-alpha",
       "zone.js": "npm:zone.js@^0.6.6"
     },
     "overrides": {
