--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "bin": {},
   "scripts": {
     "postinstall": "jspm install",
+    "reinstall": "rm -rf node_modules && rm -rf src/vendor && npm i",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "jspm bundle src/app/index --inject",
     "start": "./bin/server"
@@ -31,7 +32,7 @@
   "dependencies": {},
   "jspm": {
     "name": "catundercover",
-    "main": "app/index.js",
+    "main": "index.js",
     "directories": {
       "baseURL": "src",
       "packages": "src/vendor"
@@ -48,7 +49,7 @@
       "core-js": "npm:core-js@^2.4.0",
       "css": "github:systemjs/plugin-css@^0.1.23",
       "json": "github:systemjs/plugin-json@^0.1.2",
-      "less": "github:katrotz/systemjs-less-plugin@^1.8.4",
+      "less": "github:katrotz/systemjs-less-plugin@1.8.3",
       "lightbox2": "npm:lightbox2@^2.8.2",
       "lodash": "npm:lodash@^4.13.1",
       "text": "github:systemjs/plugin-text@^0.0.8"
@@ -57,9 +58,9 @@
       "plugin-babel": "npm:systemjs-plugin-babel@^0.0.12"
     },
     "peerDependencies": {
-      "@angular/common": "npm:@angular/common@^2.0.0-rc.5",
+      "@angular/common": "npm:@angular/common@^2.0.0-rc.1",
       "@angular/compiler": "npm:@angular/compiler@^2.0.0-rc.5",
-      "@angular/core": "npm:@angular/core@^2.0.0-rc.5",
+      "@angular/core": "npm:@angular/core@^2.0.0-rc.1",
       "@angular/platform-browser": "npm:@angular/platform-browser@^2.0.0-rc.5",
       "@angular/platform-browser-dynamic": "npm:@angular/platform-browser-dynamic@^2.0.0-rc.5",
       "@angular2-material/core": "npm:@angular2-material/core@^2.0.0-alpha.5-2",
