Upgrades less plugin

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "postinstall": "jspm install",
     "reinstall": "rm -rf node_modules && rm -rf src/vendor && npm i",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "jspm bundle src/app/index --inject",
+    "build": "jspm bundle app/index.js src/dist/catundercover.js -i",
     "start": "./bin/server"
   },
   "repository": {
@@ -49,7 +49,7 @@
       "core-js": "npm:core-js@^2.4.0",
       "css": "github:systemjs/plugin-css@^0.1.23",
       "json": "github:systemjs/plugin-json@^0.1.2",
-      "less": "github:katrotz/systemjs-less-plugin@1.8.4",
+      "less": "github:katrotz/systemjs-less-plugin@1.8.5",
       "lightbox2": "npm:lightbox2@^2.8.2",
       "lodash": "npm:lodash@^4.13.1",
       "text": "github:systemjs/plugin-text@^0.0.8"
